[tool.poetry]
name = "wiki-tools"
version = "0.0.1"
description = "Wiki tools project"

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Wiki-Tools"
repository = "https://github.com/MislavJaksic/Wiki-Tools"
documentation = "https://github.com/MislavJaksic/Wiki-Tools"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
mwapi = "^0.6.1"
loguru = "^0.7.0"
mwparserfromhell = "^0.6.4"
matplotlib-venn = "^0.11.7"
wordcloud = "^1.8.2.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
black = "^23.3.0"
pytest = "^7.3.0"
sphinx = "^6.1.3"

[tool.poetry.scripts]
wiki-tools = "wiki_tools.runner:run"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
